2025-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Set name of PVM struct
	type to provided non-null compile-time name.

2025-03-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_struct): Add assertion to verify
	that we're generating constructor for an unnamed struct.

2025-01-05  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm-val.c (pvm_allocate_struct_attrs): Do not over-allocate.
	`fnames' and `ftypes' only need `nfields' number of elements.

2025-01-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (RAS_MACRO_PUSHIOS): New macro to extend
	`pushios' insn to raise exception if there's no IOS.
	* libpoke/pkl-gen.c (pkl_gen_pr_map): Replace `pushios' insn with
	`RAS_MACRO_PUSHIOS'.
	* testsuite/poke.pkl/map-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2025-01-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl.c (pkl_resolve_module): Add support for loading modules
	using absolute path.

2024-12-31  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (isios): New instruction to check validity of IOS
	ID.
	(popios): Assume that the given IOS ID is valid, and do not raise any
	exception.
	(ioflags): Likewise.
	(iosize): Likewise.
	(ionum): Likewise.
	(ioref): Likewise.
	(iohandler): Likewise.
	(iogetv): Likewise.
	(iogetb): Likewise.
	(iosetb): Likewise.
	(iotype): Assume that the given IOS ID is valid, and do not push any
	exception.
	(late-c): Tweak `ioref_callback'.
	* libpoke/pkl-rt.pk (set_ios): Add check for validity of given IOS.
	(iosize): Likewise.
	(iohandler): Likewise.
	(ioflags): Likewise.
	(iobias): Likewise.
	(iovolatile): Likewise.
	(iosetbias): Likewise.
	(iotype): Adapt.
	* libpoke/pkl-insn.def (isios): New instruction.
	* testsuite/poke.pvm/pvm-insns-test.pk (tests): Add new tests for
	`isios' instruction.

2024-12-31  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
